# provender

./: .gitignore  AGENTS.md  APPSHEET.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml
.claude/skills/add-recipe/: SKILL.md
.claude/skills/build-shopping-list/: SKILL.md
.claude/skills/plan-week/: SKILL.md
.claude/skills/scale-recipe/: SKILL.md
.github/workflows/: ci.yml
docs/recipes/: butter-chicken.html  chicken-salad.html  cornbread-muffins.html  fajitas.html  pizza.html  potroast.html  pulled-pork.html  side-basmati-naan.html  side-caesar-salad.html  side-chips-fruit.html  side-cilantro-lime-rice-beans.html  side-coleslaw-swp.html  side-coleslaw.html  side-corn.html  side-garlic-bread-salad.html  side-potatoes-carrots-rolls.html  side-steamed-veggies.html  smash-burgers.html  teriyaki.html  ziti.html
src/provender/: __init__.py  cli.py  config.py  history.py  kroger.py  models.py  prices.py  render.py  scale.py  scrape.py  sheets.py  weather.py
tests/: test_config.py  test_format.py  test_history.py  test_kroger.py  test_plan.py  test_prices.py  test_recipe_update.py  test_render.py  test_scale.py  test_scrape.py  test_sheets.py  test_weather.py
